# 8080emu

./: .clangd  CMakeLists.txt  run_emu.sh
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
disassembler/: a.out  disassmbler.c
invaders_rom/: invaders
src/: emu.c  emu.h
